# discord-typed-interactions

./: Cargo.toml  README.md
.github/workflows/: bench.yml  rust.yml
discord-typed-interactions/: Cargo.toml
discord-typed-interactions-lib/: Cargo.toml
discord-typed-interactions-lib/src/: lib.rs
discord-typed-interactions-proc-macro/: Cargo.toml
discord-typed-interactions-proc-macro/src/: lib.rs
discord-typed-interactions/src/: lib.rs
lib/: Cargo.toml
lib/benches/: iai.rs
lib/src/: casing.rs  cmd.rs  defer.rs  lib.rs  name.rs
macro/: Cargo.toml
macro/src/: lib.rs
src/: lib.rs
test-harness/: Cargo.toml  build.rs
test-harness/schema/: ctf.json  multiple_subgroups.json  no_subcommands.json
test-harness/src/: builder.rs  ctf.rs  main.rs  multiple_schema.rs  no_subcommands.rs
test-harness/tests/: integration_test.rs
wrapper/: Cargo.toml
wrapper/src/: lib.rs
