[package]
name = "discord_typed_interactions"
version = "0.1.0"
authors = ["Teddy Heinen <teddy@heinen.dev>"]
description = "suppose you're working with discord slash commands and you want statically typed request types "
keywords = ["discord"]
edition = "2018"


[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
heck = "0.3.3"
itertools = "0.10.1"
pretty_assertions = "0.7.2"
