[package]
name = "discord_typed_interactions_proc_macro"
version = "0.0.0"
authors = ["Teddy Heinen <teddy@heinen.dev>"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = "1.0"
discord_typed_interactions_lib = { path = "../discord-typed-interactions-lib" }
