[package]
name = "discord_typed_interactions"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discord_typed_interactions_lib = { path = "../discord-typed-interactions-lib" }
discord_typed_interactions_proc_macro = { path = "../discord-typed-interactions-proc-macro" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"