[package]
name = "discord_typed_interactions_lib"
version = "0.1.0"
authors = ["Teddy Heinen <teddy@heinen.dev>"]
description = "suppose you're working with discord slash commands and you want statically typed request types "
keywords = ["discord"]
edition = "2018"


[dependencies]
quote = "1"
proc-macro2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
iai = "0.1"

[[bench]]
name = "iai"
harness = false
