[package]
name = "test-harness"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
discord_typed_interactions = { path = "../wrapper", features = ["macro"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

[[bin]]
path = "src/ctf.rs"
name = "ctf"

[[bin]]
path = "src/no_subcommands.rs"
name = "no_subcommands"

[[bin]]
path = "src/multiple_schema.rs"
name = "multiple_schema"
