[package]
name = "discord_typed_interactions"
version = "0.1.0"
edition = "2018"
authors = ["Teddy Heinen <teddy@heinen.dev>", "Nathan Nguyen <nathan.tm.nguyen@gmail.com"]
description = "suppose you're working with discord slash commands and you want statically typed request types"
keywords = ["discord"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discord_typed_interactions_lib = { path = "../lib" }
discord_typed_interactions_proc_macro = { path = "../macro", optional = true }

[features]
macro = ["discord_typed_interactions_proc_macro"]
builder = []
